deployments/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: km-system
  labels:
    name: km-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: km-apps
  labels:
    name: km-apps
---
apiVersion: v1
kind: Namespace
metadata:
  name: km-data
  labels:
    name: km-data
